<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >

        <TextView
            android:id="@+id/tv_room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_info"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp" />

        <TextView
            android:id="@+id/tv_title_room_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_room_name"
            android:layout_margin="2dp"
            android:drawablePadding="4dp"
            android:text="@string/title_followers"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_room_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_room_name"
            android:layout_toEndOf="@id/tv_title_room_followers"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp" />

        <TextView
            android:id="@+id/tv_title_room_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_room_followers"
            android:text="@string/title_room_level"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp" />

        <TextView
            android:id="@+id/tv_room_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_room_followers"
            android:layout_toEndOf="@id/tv_title_room_level"
            android:text="@string/room_level"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp" />

        <TextView
            android:id="@+id/tv_title_room_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_room_level"
            android:text="@string/title_room_category"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp" />

        <TextView
            android:id="@+id/tv_room_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_room_level"
            android:layout_toEndOf="@id/tv_title_room_category"
            android:text="@string/room_category"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:drawablePadding="4dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>