<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:id="@+id/cv_item_showroom_lives"
    android:clickable="true"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/img_live_member_showroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/live_jkt48_member"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_image_24"/>

        <TextView
            android:id="@+id/tv_member_showroom_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_below="@id/img_live_member_showroom"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/member_name_item"
            android:layout_alignBottom="@id/btn_views"
            android:layout_alignStart="@id/btn_views"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_live_member_showroom"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/show"
            android:layout_alignParentEnd="true"
            android:background="@drawable/custom_button_background"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/views_count"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>